# py-mono

./: .gitignore  .pre-commit-config.yaml  APPLE_TO_APPLE_COMPARISON.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_REPORT.md  INTEGRATION_COMPLETE.md  LICENSE  PHASE2_SUMMARY.md  PLAN_TO_93_PERCENT.md  PROJECT_SUMMARY.md  PYPI_RELEASE_v0.0.4.md  QUICKSTART.md  QUICK_WINS_COMPLETE.md  README.md  TARGET_80_ACHIEVED.md  TARGET_93_ACHIEVED.md  TESTING.md  TEST_COVERAGE_REPORT.md  coverage.xml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
.messenger/.sessions/: slack_C0AGACXB77H.jsonl
.sessions/: .input_history  coding-session.jsonl
examples/: basic_usage.py  coding-agent-full.py  extension-example.py  message-queue-demo.py  output-modes-demo.py  quick-wins-demo.py  session-example.py  skills-example.py
examples/agent-core/: basic_agent.py
examples/context/: AGENTS.md  SYSTEM.md
examples/extensions/: datetime_extension.py
examples/prompts/: code-review.md  refactor.md
examples/skills/web-search/: SKILL.md
examples/web-ui/: agent_server.py  basic_server.py
scripts/: install-dev.sh  lint.sh  run-tests.sh  test.sh
tests/: test_integration.py  test_py_ai.py
